fix hover text highlighting so it works in dark mode

--- a/assets/style.css
+++ b/assets/style.css
@@ -143,8 +143,12 @@ footer {
     hr {
       border: 0;
       border-top: 2px solid var(--selection-light);
-    }
+    } 
     
+    p:hover, li:hover {
+      background-color: rgba(233, 230, 20, 0.824) !important;
+   
+   }
 }
 /* alternate paragraph shading helps users stay
    on track while reading. This shading is very 
@@ -159,6 +163,6 @@ footer {
    on what they are currently reading. This shading
    is darker than the alt-paragraph shading.        */
 p:hover, li:hover {
-   background-color: rgba(233, 230, 20, 0.824) !important;
+   background-color: rgba(242, 242, 235, 0.932);
 
 }
